--- a/projects/ts-etl-ui/src/index.html
+++ b/projects/ts-etl-ui/src/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="commit-hash" content="<!--COMMIT_HASH-->">
 </head>
 <body class="mat-typography">
   <app-root></app-root>
