add routing to all 3 tabs

--- a/projects/ts-etl-ui/src/index.html
+++ b/projects/ts-etl-ui/src/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8">
   <title>TS ETL UI</title>
-  <base href="./">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="public/favicon.ico">
   <meta name="commit-hash" content="<!--COMMIT_HASH-->">
 </head>
 <body class="mat-typography">
-  <app-root></app-root>
+<app-root></app-root>
 </body>
 </html>
