--- a/all-report/index.html
+++ b/all-report/index.html
@@ -1,2 +1,2 @@
 <a href="playwright-report">Current Playwright html report</a>
-<a href="allure-report">Historical Playwright allure report</a>
+<a href="allure-report">Playwright allure report with Historical runs</a>
