this should work

--- a/all-report/index.html
+++ b/all-report/index.html
@@ -13,8 +13,8 @@
 </head>
 <body>
 <main class="d-flex flex-column p-2">
-  <a href="playwright-report">Playwright html report</a>
-  <a href="coverage-e2e/lcov-report">Playwright coverage report</a>
+  <a href="playwright-report/index.html">Playwright html report</a>
+  <a href="coverage-e2e/lcov-report/index.html">Playwright coverage report</a>
 </main>
 </body>
 </html>
