--- a/projects/ts-etl-ui/src/index.html
+++ b/projects/ts-etl-ui/src/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/x-icon" href="public/favicon.ico">
   <meta name="commit-hash" content="<!--COMMIT_HASH-->">
 </head>
-<body class="mat-typography">
+<body class="my-typography">
 <app-root></app-root>
 </body>
 </html>
